--- a/CommerceApplication/src/Application.Web.UI/Views/_ViewImports.cshtml
+++ b/CommerceApplication/src/Application.Web.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
-﻿@using Application.Web.UI
+﻿@using Application.Domain.Entities.Pagination
+@using Application.Web.UI
 @using Application.Web.UI.Models
+@using Application.Web.UI.Models.Enums
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, Application.Web.UI"
