--- a/CommerceApplication/src/Application.Web.UI/Views/Shared/_Layout.cshtml
+++ b/CommerceApplication/src/Application.Web.UI/Views/Shared/_Layout.cshtml
@@ -74,7 +74,10 @@
             &copy; 2021 - Application.Web.UI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
