--- a/CommerceApplication/src/Application.Web.UI/Views/Shared/_Layout.cshtml
+++ b/CommerceApplication/src/Application.Web.UI/Views/Shared/_Layout.cshtml
@@ -29,6 +29,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Supplier" asp-action="Index">Suppliers</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Categories</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
