--- a/CommerceApplication/src/Application.Web.UI/Views/Supplier/Index.cshtml
+++ b/CommerceApplication/src/Application.Web.UI/Views/Supplier/Index.cshtml
@@ -34,49 +34,53 @@
 
             @foreach (var item in Model.List)
             {
-            <tr>
+                <tr>
 
-                @if (item.Cpf != null)
-                {
-                    @Html.Raw("<td>")
-                    @Html.DisplayFor(modelItem => item.FullName)
-                    @Html.Raw("</td>")
-                    @Html.Raw("<td>")
-                    @Html.DisplayFor(modelItem => item.Cpf)
-                    @Html.Raw("</td>")
-                }
-                else
-                {
-                    @Html.Raw("<td>")
-                    @Html.DisplayFor(modelItem => item.CompanyName)
-                    @Html.Raw("</td>")
-                    @Html.Raw("<td>")
-                    @Html.DisplayFor(modelItem => item.Cnpj)
-                    @Html.Raw("</td>")
-                }
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email.EmailAddress)
-                </td>
+                    @if (item.Cpf != null)
+                    {
+                        @Html.Raw("<td>")
+                        @Html.DisplayFor(modelItem => item.FullName)
+                        @Html.Raw("</td>")
+                        @Html.Raw("<td>")
+                        @Html.DisplayFor(modelItem => item.Cpf)
+                        @Html.Raw("</td>")
+                    }
+                    else
+                    {
+                        @Html.Raw("<td>")
+                        @Html.DisplayFor(modelItem => item.CompanyName)
+                        @Html.Raw("</td>")
+                        @Html.Raw("<td>")
+                        @Html.DisplayFor(modelItem => item.Cnpj)
+                        @Html.Raw("</td>")
+                    }
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email.EmailAddress)
+                    </td>
 
-                <td>
-                    <a asp-action="Edit" asp-controller="Supplier" asp-route-id="@item.Id"
-                       class="btn btn-warning" title="Edit">
-                        <span class="fas fa-edit">Edit</span>
-                    </a>
-                    <a asp-action="Details" asp-controller="Supplier" asp-route-id="@item.Id"
-                       class="btn btn-primary" title="Details">
-                        <span class="fas fa-edit">Details</span>
-                    </a>
-                    <a asp-action="Delete" asp-controller="Supplier" asp-route-id="@item.Id"
-                       class="btn btn-danger" title="Delete">
-                        <span class="fas fa-edit">Delete</span>
-                    </a>
-                </td>
-            </tr>
+                    <td>
+                        <a asp-action="Edit" asp-controller="Supplier" asp-route-id="@item.Id"
+                           class="btn btn-warning" title="Edit">
+                            <span class="fas fa-edit">Edit</span>
+                        </a>
+                        <a asp-action="Details" asp-controller="Supplier" asp-route-id="@item.Id"
+                           class="btn btn-primary" title="Details">
+                            <span class="fas fa-edit">Details</span>
+                        </a>
+                        <a asp-action="Delete" asp-controller="Supplier" asp-route-id="@item.Id"
+                           class="btn btn-danger" title="Delete">
+                            <span class="fas fa-edit">Delete</span>
+                        </a>
+                    </td>
+                </tr>
 
             }
         </tbody>
     </table>
+
+    <a asp-action="ExportSupplierXlsx" asp-controller="Supplier" class="btn btn-danger" title="Report">
+        <span class="fas fa-edit">Generate Report</span>
+    </a>
 </div>
 
 <vc:pagination model-pagination="@Model"></vc:pagination>
