--- a/CommerceApplication/src/Application.Web.UI/Views/Product/Edit.cshtml
+++ b/CommerceApplication/src/Application.Web.UI/Views/Product/Edit.cshtml
@@ -65,6 +65,28 @@
                 <span asp-validation-for="SupplierId" class="text-danger"></span>
             </div>
 
+            <div class="form-group">
+                <div class="custom-file">
+                    <label asp-for="ImagesUpload" class="form-label"></label>
+                    <input multiple asp-for="ImagesUpload" class="form-control custom-file-input">
+                    <label class="custom-file-label">Choose image...</label>
+                </div>
+            </div>
+
+            @if(Model.Images.Count > 0)
+            {
+                @foreach (var image in Model.Images)
+                {
+                    var photoPath = "~/images/" + image.ImagePath;
+
+                    <img src="@photoPath" alt="" class="card-img" width="100" height="150"
+                        asp-append-version="true" />
+                    <a asp-action="DeleteImage" asp-controller="Product" asp-route-id="@image.Id" title="Delete">
+                        <span class="fas fa-edit">Delete</span>
+                    </a>
+                }
+            }
+
             <div class="form-group row">
                 <div class="col-sm-10">
                     <button type="submit" value="Edit" class="btn btn-primary">Save</button>
