--- a/CommerceApplication/src/Application.Web.UI/Views/Shared/_Layout.cshtml
+++ b/CommerceApplication/src/Application.Web.UI/Views/Shared/_Layout.cshtml
@@ -35,6 +35,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Categories</a>
                         </li>
+                        @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Administration" asp-action="ListRoles">
+                                    Manage Roles
+                                </a>
+                            </li>
+                        }
                     </ul>
                 </div>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
