Corrigindo a View do Create Supplier

--- a/CommerceApplication/src/Application.Web.UI/Views/Supplier/Create.cshtml
+++ b/CommerceApplication/src/Application.Web.UI/Views/Supplier/Create.cshtml
@@ -95,20 +95,38 @@
 
             <div>
                 <h3>Phones</h3>
+                <input asp-for="CellPhone.Id" hidden>
                 <div class="mb-3">
-                    <label asp-for="CellPhone" class="form-label"></label>
-                    <input asp-for="CellPhone" class="form-control">
-                    <span asp-validation-for="CellPhone" class="text-danger"></span>
+                    <label asp-for="CellPhone.Ddd" class="form-label"></label>
+                    <input asp-for="CellPhone.Ddd" class="form-control">
+                    <span asp-validation-for="CellPhone.Ddd" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
-                    <label asp-for="HomePhone" class="form-label"></label>
-                    <input asp-for="HomePhone" class="form-control">
-                    <span asp-validation-for="HomePhone" class="text-danger"></span>
+                    <label asp-for="CellPhone.Number" class="form-label"></label>
+                    <input asp-for="CellPhone.Number" class="form-control">
+                    <span asp-validation-for="CellPhone.Number" class="text-danger"></span>
+                </div>
+                <input asp-for="HomePhone.Id" hidden>
+                <div class="mb-3">
+                    <label asp-for="HomePhone.Ddd" class="form-label"></label>
+                    <input asp-for="HomePhone.Ddd" class="form-control">
+                    <span asp-validation-for="HomePhone.Ddd" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
-                    <label asp-for="Phone" class="form-label"></label>
-                    <input asp-for="Phone" class="form-control">
-                    <span asp-validation-for="Phone" class="text-danger"></span>
+                    <label asp-for="HomePhone.Number" class="form-label"></label>
+                    <input asp-for="HomePhone.Number" class="form-control">
+                    <span asp-validation-for="HomePhone.Number" class="text-danger"></span>
+                </div>
+                <input asp-for="Phone.Id" hidden>
+                <div class="mb-3">
+                    <label asp-for="Phone.Ddd" class="form-label"></label>
+                    <input asp-for="Phone.Ddd" class="form-control">
+                    <span asp-validation-for="Phone.Ddd" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <label asp-for="Phone.Number" class="form-label"></label>
+                    <input asp-for="Phone.Number" class="form-control">
+                    <span asp-validation-for="Phone.Number" class="text-danger"></span>
                 </div>
             </div>
 
@@ -197,20 +215,38 @@
 
             <div>
                 <h3>Phones</h3>
+                <input asp-for="CellPhone.Id" hidden>
                 <div class="mb-3">
-                    <label asp-for="CellPhone" class="form-label"></label>
-                    <input asp-for="CellPhone" class="form-control">
-                    <span asp-validation-for="CellPhone" class="text-danger"></span>
+                    <label asp-for="CellPhone.Ddd" class="form-label"></label>
+                    <input asp-for="CellPhone.Ddd" class="form-control">
+                    <span asp-validation-for="CellPhone.Ddd" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
-                    <label asp-for="HomePhone" class="form-label"></label>
-                    <input asp-for="HomePhone" class="form-control">
-                    <span asp-validation-for="HomePhone" class="text-danger"></span>
+                    <label asp-for="CellPhone.Number" class="form-label"></label>
+                    <input asp-for="CellPhone.Number" class="form-control">
+                    <span asp-validation-for="CellPhone.Number" class="text-danger"></span>
+                </div>
+                <input asp-for="HomePhone.Id" hidden>
+                <div class="mb-3">
+                    <label asp-for="HomePhone.Ddd" class="form-label"></label>
+                    <input asp-for="HomePhone.Ddd" class="form-control">
+                    <span asp-validation-for="HomePhone.Ddd" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
-                    <label asp-for="Phone" class="form-label"></label>
-                    <input asp-for="Phone" class="form-control">
-                    <span asp-validation-for="Phone" class="text-danger"></span>
+                    <label asp-for="HomePhone.Number" class="form-label"></label>
+                    <input asp-for="HomePhone.Number" class="form-control">
+                    <span asp-validation-for="HomePhone.Number" class="text-danger"></span>
+                </div>
+                <input asp-for="Phone.Id" hidden>
+                <div class="mb-3">
+                    <label asp-for="Phone.Ddd" class="form-label"></label>
+                    <input asp-for="Phone.Ddd" class="form-control">
+                    <span asp-validation-for="Phone.Ddd" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <label asp-for="Phone.Number" class="form-label"></label>
+                    <input asp-for="Phone.Number" class="form-control">
+                    <span asp-validation-for="Phone.Number" class="text-danger"></span>
                 </div>
             </div>
 
